@@ -64,7 +64,7 @@ DRLM are compatible with previous versions, unless otherwise noted.
 
 The references pointing to fix #nr or issue #nr refer to our issues tracker
 
-DRLM Version 2.4.0 (April 2021) - Release Notes
+DRLM Version 2.4.0 (September 2021) - Release Notes
 --------------------------------------------------
   * Multiple configuration supported
  
@@ -115,6 +115,8 @@ DRLM Version 2.4.0 (April 2021) - Release Notes
   * Improved logs management
 
   * Debian 11 Support on install client workflow.
+
+  * Rocky Linux 8 server and client support.
 
 
 DRLM Version 2.3.2 (December 2020) - Release Notes
